--- a/applyonline/static/aofront/assets/i18n/de.json
+++ b/applyonline/static/aofront/assets/i18n/de.json
@@ -32,7 +32,7 @@
   "aofront.footer.changelog": "Changelog anzeigen",
   "aofront.header.github": "Projekt Github-Repository",
   "aofront.menu.about": "Über",
-  "aofront.menu.examples": "Beispiele",
+  "aofront.menu.applications": "Beispiele",
   "aofront.menu.features": "Eigenschaften",
   "aofront.menu.login": "Anmelden",
   "aofront.menu.logout": "Abmelden",
