--- a/applyonline/static/aofront/assets/i18n/es.json
+++ b/applyonline/static/aofront/assets/i18n/es.json
@@ -32,7 +32,7 @@
   "aofront.footer.changelog": "Mostrar historial de cambios",
   "aofront.header.github": "Repositorio del Proyecto en Github",
   "aofront.menu.about": "Acerca",
-  "aofront.menu.examples": "Ejemplos",
+  "aofront.menu.applications": "Ejemplos",
   "aofront.menu.features": "Características",
   "aofront.menu.login": "Iniciar sesión",
   "aofront.menu.logout": "Cerrar sesión",
