--- a/applyonline/static/aofront/assets/i18n/fr.json
+++ b/applyonline/static/aofront/assets/i18n/fr.json
@@ -32,7 +32,7 @@
   "aofront.footer.changelog": "Afficher le journal des changements",
   "aofront.header.github": "Dépot Github",
   "aofront.menu.about": "À propos",
-  "aofront.menu.examples": "Exemples",
+  "aofront.menu.applications": "Exemples",
   "aofront.menu.features": "Fonctionnalités",
   "aofront.menu.login": "Connexion",
   "aofront.menu.logout": "Déconnexion",
