--- a/applyonline/static/aofront/assets/i18n/pt-br.json
+++ b/applyonline/static/aofront/assets/i18n/pt-br.json
@@ -32,7 +32,7 @@
   "aofront.footer.changelog": "Mostrar changelog",
   "aofront.header.github": "Project Github Repository",
   "aofront.menu.about": "Sobre",
-  "aofront.menu.examples": "Exemplos",
+  "aofront.menu.applications": "Exemplos",
   "aofront.menu.features": "Características",
   "aofront.menu.login": "Sign in",
   "aofront.menu.logout": "Logout",
