--- a/applyonline/static/aofront/assets/i18n/sk.json
+++ b/applyonline/static/aofront/assets/i18n/sk.json
@@ -32,7 +32,7 @@
   "aofront.footer.changelog": "Zobraziť list zmien",
   "aofront.header.github": "Github Repotitár Projektu",
   "aofront.menu.about": "Domov",
-  "aofront.menu.examples": "Príklady",
+  "aofront.menu.applications": "Príklady",
   "aofront.menu.features": "Vlastnosti",
   "aofront.menu.login": "Prihlásenie",
   "aofront.menu.logout": "Odhlásenie",
