--- a/applyonline/static/aofront/assets/i18n/de.json
+++ b/applyonline/static/aofront/assets/i18n/de.json
@@ -12,28 +12,28 @@
   "aofront.about.get-notified.follow": "Folge",
   "aofront.about.get-notified.title": "Werde über neue Versionen informiert",
   "aofront.about.get-started": "Leg los!",
-  "aofront.features.angular": "Modernes und leistungsfähiges Framework",
-  "aofront.features.angular-cli": "Eine Befehlszeilenschnittstelle für Angular",
-  "aofront.features.angular-material": "Material Design-Komponente",
-  "aofront.features.bootstrap": "Responsives Layout von der weltbekannten UI-Bibliothek",
-  "aofront.features.cypress": "Cypress ist ein Frontend-Testwerkzeug der nächsten Generation, das für das moderne Web entwickelt wurde.",
-  "aofront.features.documentation": "Doku",
-  "aofront.features.fontawesome": "Einfach zu bedienende Vektor-Icons und soziale Logos",
-  "aofront.features.guide": "Anleitung",
-  "aofront.features.lazyloading.description": "Schnellere Startzeit mit Lazy Loaded Feature-Modulen",
-  "aofront.features.lazyloading.title": "Lazy Loading",
-  "aofront.features.ngrx": "Einweg-Datenfluss unterstützt von RxJS Observables",
-  "aofront.features.ngxtranslate": "Eine Internationalisierungsbibliothek für Angular",
-  "aofront.features.rxjs": "Reaktive Programmierung mit Async-Sammlungen unter Verwendung von Observablen",
-  "aofront.features.themes.description": "Flexible Theming-Unterstützung für bereitgestellte und benutzerdefinierte Komponenten.",
-  "aofront.features.themes.title": "Themen",
-  "aofront.features.title": "Features",
-  "aofront.features.typescript": "Überlegene Entwickler Erfahrung, Code-Vervollständigung, Refaktorierung und weniger Bugs",
+  "aofront.tours.angular": "Modernes und leistungsfähiges Framework",
+  "aofront.tours.angular-cli": "Eine Befehlszeilenschnittstelle für Angular",
+  "aofront.tours.angular-material": "Material Design-Komponente",
+  "aofront.tours.bootstrap": "Responsives Layout von der weltbekannten UI-Bibliothek",
+  "aofront.tours.cypress": "Cypress ist ein Frontend-Testwerkzeug der nächsten Generation, das für das moderne Web entwickelt wurde.",
+  "aofront.tours.documentation": "Doku",
+  "aofront.tours.fontawesome": "Einfach zu bedienende Vektor-Icons und soziale Logos",
+  "aofront.tours.guide": "Anleitung",
+  "aofront.tours.lazyloading.description": "Schnellere Startzeit mit Lazy Loaded Feature-Modulen",
+  "aofront.tours.lazyloading.title": "Lazy Loading",
+  "aofront.tours.ngrx": "Einweg-Datenfluss unterstützt von RxJS Observables",
+  "aofront.tours.ngxtranslate": "Eine Internationalisierungsbibliothek für Angular",
+  "aofront.tours.rxjs": "Reaktive Programmierung mit Async-Sammlungen unter Verwendung von Observablen",
+  "aofront.tours.themes.description": "Flexible Theming-Unterstützung für bereitgestellte und benutzerdefinierte Komponenten.",
+  "aofront.tours.themes.title": "Themen",
+  "aofront.tours.title": "Tours",
+  "aofront.tours.typescript": "Überlegene Entwickler Erfahrung, Code-Vervollständigung, Refaktorierung und weniger Bugs",
   "aofront.footer.changelog": "Changelog anzeigen",
   "aofront.header.github": "Projekt Github-Repository",
   "aofront.menu.about": "Über",
   "aofront.menu.applications": "Beispiele",
-  "aofront.menu.features": "Eigenschaften",
+  "aofront.menu.tours": "Eigenschaften",
   "aofront.menu.login": "Anmelden",
   "aofront.menu.logout": "Abmelden",
   "aofront.menu.settings": "Einstellungen",
