--- a/applyonline/static/aofront/assets/i18n/en.json
+++ b/applyonline/static/aofront/assets/i18n/en.json
@@ -12,29 +12,29 @@
   "aofront.about.get-notified.follow": "Follow",
   "aofront.about.get-notified.title": "Get notified about new releases",
   "aofront.about.get-started": "Get started",
-  "aofront.features.angular": "Modern powerful framework",
-  "aofront.features.angular-cli": "A command line interface for Angular",
-  "aofront.features.angular-material": "Material design component library",
-  "aofront.features.bootstrap": "Responsive layout from battle tested, world most famous UI library",
-  "aofront.features.cypress": "Cypress is a next generation front end testing tool built for the modern web.",
-  "aofront.features.documentation": "Docs",
-  "aofront.features.fontawesome": "Easy to use vector icons and social logos",
-  "aofront.features.guide": "Guide",
-  "aofront.features.lazyloading.description": "Faster startup time with lazy loaded feature modules",
-  "aofront.features.lazyloading.title": "Lazy loading",
-  "aofront.features.ngrx": "One way data flow powered by RxJS Observables",
-  "aofront.features.ngxtranslate": "An internationalization library for Angular",
-  "aofront.features.rxjs": "Reactive programming with async collections using Observables",
-  "aofront.features.themes.description": "Flexible theming support for provided and custom components",
-  "aofront.features.themes.title": "Themes",
-  "aofront.features.title": "Features",
-  "aofront.features.typescript": "Superior developer experience, code completion, refactoring and less bugs",
+  "aofront.tours.angular": "Modern powerful framework",
+  "aofront.tours.angular-cli": "A command line interface for Angular",
+  "aofront.tours.angular-material": "Material design component library",
+  "aofront.tours.bootstrap": "Responsive layout from battle tested, world most famous UI library",
+  "aofront.tours.cypress": "Cypress is a next generation front end testing tool built for the modern web.",
+  "aofront.tours.documentation": "Docs",
+  "aofront.tours.fontawesome": "Easy to use vector icons and social logos",
+  "aofront.tours.guide": "Guide",
+  "aofront.tours.lazyloading.description": "Faster startup time with lazy loaded feature modules",
+  "aofront.tours.lazyloading.title": "Lazy loading",
+  "aofront.tours.ngrx": "One way data flow powered by RxJS Observables",
+  "aofront.tours.ngxtranslate": "An internationalization library for Angular",
+  "aofront.tours.rxjs": "Reactive programming with async collections using Observables",
+  "aofront.tours.themes.description": "Flexible theming support for provided and custom components",
+  "aofront.tours.themes.title": "Themes",
+  "aofront.tours.title": "Tours",
+  "aofront.tours.typescript": "Superior developer experience, code completion, refactoring and less bugs",
   "aofront.footer.changelog": "Show changelog",
   "aofront.header.github": "Project Github Repository",
   "aofront.menu.about": "About",
-  "aofront.menu.applications": "applications",
+  "aofront.menu.applications": "Applications",
   "aofront.menu.applicationform": "Application Form",
-  "aofront.menu.features": "Features",
+  "aofront.menu.tours": "Tours",
   "aofront.menu.login": "Sign in",
   "aofront.menu.logout": "Logout",
   "aofront.menu.settings": "Settings",
@@ -59,6 +59,6 @@
   "aofront.settings.themes.sticky-header": "Sticky header",
   "aofront.settings.themes.title": "Themes",
   "aofront.settings.title": "Settings",
-  "aofront.title.long": "Angular NgRx Material Starter",
-  "aofront.title.short": "Angular Starter"
+  "aofront.title.long": "Apply Online",
+  "aofront.title.short": "Apply Online"
 }
