--- a/applyonline/static/aofront/assets/i18n/es.json
+++ b/applyonline/static/aofront/assets/i18n/es.json
@@ -12,28 +12,28 @@
   "aofront.about.get-notified.follow": "Siga a",
   "aofront.about.get-notified.title": "Ser notificado acerca de nuevos lanzamientos",
   "aofront.about.get-started": "Comenzar",
-  "aofront.features.angular": "framework moderno y poderoso",
-  "aofront.features.angular-cli": "Una interfaz de línea de comando para Angular",
-  "aofront.features.angular-material": "Librería de componentes de Material design",
-  "aofront.features.bootstrap": "Diseño receptivo de la librería de IU probada en batalla más famosa del mundo",
-  "aofront.features.cypress": "Cypress es una herramienta de testeo de última generación construida para la web moderna.",
-  "aofront.features.documentation": "Docs",
-  "aofront.features.fontawesome": "Iconos vectoriales fáciles de usar y logos sociales",
-  "aofront.features.guide": "Guía",
-  "aofront.features.lazyloading.description": "Tiempo de inicio más rápido con módulos de funciones cargadas perezosas",
-  "aofront.features.lazyloading.title": "Carga perezosa",
-  "aofront.features.ngrx": "Flujo de datos unidireccional impulsado por Observables RxJS",
-  "aofront.features.ngxtranslate": "Una librería de internacionalización para Angular",
-  "aofront.features.rxjs": "Programación reactiva con colecciones asíncronas utlilizando Observables",
-  "aofront.features.themes.description": "Soporte flexible de tematización para componentes proporcionados y personalizados",
-  "aofront.features.themes.title": "Temas",
-  "aofront.features.title": "Características",
-  "aofront.features.typescript": "Experiencia superior de desarrollador, completado de código, refactorización y menos errores",
+  "aofront.tours.angular": "framework moderno y poderoso",
+  "aofront.tours.angular-cli": "Una interfaz de línea de comando para Angular",
+  "aofront.tours.angular-material": "Librería de componentes de Material design",
+  "aofront.tours.bootstrap": "Diseño receptivo de la librería de IU probada en batalla más famosa del mundo",
+  "aofront.tours.cypress": "Cypress es una herramienta de testeo de última generación construida para la web moderna.",
+  "aofront.tours.documentation": "Docs",
+  "aofront.tours.fontawesome": "Iconos vectoriales fáciles de usar y logos sociales",
+  "aofront.tours.guide": "Guía",
+  "aofront.tours.lazyloading.description": "Tiempo de inicio más rápido con módulos de funciones cargadas perezosas",
+  "aofront.tours.lazyloading.title": "Carga perezosa",
+  "aofront.tours.ngrx": "Flujo de datos unidireccional impulsado por Observables RxJS",
+  "aofront.tours.ngxtranslate": "Una librería de internacionalización para Angular",
+  "aofront.tours.rxjs": "Programación reactiva con colecciones asíncronas utlilizando Observables",
+  "aofront.tours.themes.description": "Soporte flexible de tematización para componentes proporcionados y personalizados",
+  "aofront.tours.themes.title": "Temas",
+  "aofront.tours.title": "Características",
+  "aofront.tours.typescript": "Experiencia superior de desarrollador, completado de código, refactorización y menos errores",
   "aofront.footer.changelog": "Mostrar historial de cambios",
   "aofront.header.github": "Repositorio del Proyecto en Github",
   "aofront.menu.about": "Acerca",
   "aofront.menu.applications": "Ejemplos",
-  "aofront.menu.features": "Características",
+  "aofront.menu.tours": "Características",
   "aofront.menu.login": "Iniciar sesión",
   "aofront.menu.logout": "Cerrar sesión",
   "aofront.menu.settings": "Ajustes",
