--- a/applyonline/static/aofront/assets/i18n/fr.json
+++ b/applyonline/static/aofront/assets/i18n/fr.json
@@ -12,28 +12,28 @@
   "aofront.about.get-notified.follow": "Suivez",
   "aofront.about.get-notified.title": "Soyez informé des nouvelles versions",
   "aofront.about.get-started": "Démarrage",
-  "aofront.features.angular": "Modern powerful framework",
-  "aofront.features.angular-cli": "Une interface en ligne de commande pour Angular",
-  "aofront.features.angular-material": "Bibliothèque de composants material design",
-  "aofront.features.bootstrap": "Bibliothèque d'interface utilisateur la plus connue au monde avec une mise en page réactive",
-  "aofront.features.cypress": "Cypress est un outil de test de nouvelle génération conçu pour la bande moderne.",
-  "aofront.features.documentation": "Documentation",
-  "aofront.features.fontawesome": "Icônes vectorielles faciles à utiliser et logos sociaux",
-  "aofront.features.guide": "Manuel",
-  "aofront.features.lazyloading.description": "Temps de démarrage plus rapide avec des modules fonctionnels chargés à la demande",
-  "aofront.features.lazyloading.title": "Chargement à la demande",
-  "aofront.features.ngrx": "Flux de données à sens unique alimenté par les Observables RxJS",
-  "aofront.features.ngxtranslate": "Une bibliothèque d'internationalisation pour Angular",
-  "aofront.features.rxjs": "Programmation réactive avec des collections asynchrones à l'aide d'observables",
-  "aofront.features.themes.description": "Prise en charge flexible du thème pour les composants fournis et personnalisés",
-  "aofront.features.themes.title": "Thèmes",
-  "aofront.features.title": "Fonctionnalités",
-  "aofront.features.typescript": "Expérience de développement supérieure, achèvement du code, refactoring et réduction des bogues",
+  "aofront.tours.angular": "Modern powerful framework",
+  "aofront.tours.angular-cli": "Une interface en ligne de commande pour Angular",
+  "aofront.tours.angular-material": "Bibliothèque de composants material design",
+  "aofront.tours.bootstrap": "Bibliothèque d'interface utilisateur la plus connue au monde avec une mise en page réactive",
+  "aofront.tours.cypress": "Cypress est un outil de test de nouvelle génération conçu pour la bande moderne.",
+  "aofront.tours.documentation": "Documentation",
+  "aofront.tours.fontawesome": "Icônes vectorielles faciles à utiliser et logos sociaux",
+  "aofront.tours.guide": "Manuel",
+  "aofront.tours.lazyloading.description": "Temps de démarrage plus rapide avec des modules fonctionnels chargés à la demande",
+  "aofront.tours.lazyloading.title": "Chargement à la demande",
+  "aofront.tours.ngrx": "Flux de données à sens unique alimenté par les Observables RxJS",
+  "aofront.tours.ngxtranslate": "Une bibliothèque d'internationalisation pour Angular",
+  "aofront.tours.rxjs": "Programmation réactive avec des collections asynchrones à l'aide d'observables",
+  "aofront.tours.themes.description": "Prise en charge flexible du thème pour les composants fournis et personnalisés",
+  "aofront.tours.themes.title": "Thèmes",
+  "aofront.tours.title": "Fonctionnalités",
+  "aofront.tours.typescript": "Expérience de développement supérieure, achèvement du code, refactoring et réduction des bogues",
   "aofront.footer.changelog": "Afficher le journal des changements",
   "aofront.header.github": "Dépot Github",
   "aofront.menu.about": "À propos",
   "aofront.menu.applications": "Exemples",
-  "aofront.menu.features": "Fonctionnalités",
+  "aofront.menu.tours": "Fonctionnalités",
   "aofront.menu.login": "Connexion",
   "aofront.menu.logout": "Déconnexion",
   "aofront.menu.settings": "Paramètres",
