--- a/applyonline/static/aofront/assets/i18n/pt-br.json
+++ b/applyonline/static/aofront/assets/i18n/pt-br.json
@@ -12,28 +12,28 @@
   "aofront.about.get-notified.follow": "Siga",
   "aofront.about.get-notified.title": "Seja notificado sobre novos lançamentos",
   "aofront.about.get-started": "Iniciar",
-  "aofront.features.angular": "Framework moderno e poderoso",
-  "aofront.features.angular-cli": "Interface de comando para o Angular",
-  "aofront.features.angular-material": "Biblioteca de componentes Material Design",
-  "aofront.features.bootstrap": "Design responsivo com uma das maiores libs de UI do mundo",
-  "aofront.features.cypress": "Cypress é uma ferramenta de teste de última geração criada para a web moderna.",
-  "aofront.features.documentation": "Docs",
-  "aofront.features.fontawesome": "Fácil de usar vector icons e social logos",
-  "aofront.features.guide": "Guide",
-  "aofront.features.lazyloading.description": "Rápido carregamento inicial com carregamento por demanda de feature modules",
-  "aofront.features.lazyloading.title": "Carregamento por demanda",
-  "aofront.features.ngrx": "Fluxo de dados unidirecional alimentado por Observables RxJS",
-  "aofront.features.ngxtranslate": "Uma biblioteca de internacionalização para o Angular",
-  "aofront.features.rxjs": "Programação reativa com coleções assíncronas usando Observables",
-  "aofront.features.themes.description": "Temas flexíveis que são suportados port provided e custom components",
-  "aofront.features.themes.title": "Temas",
-  "aofront.features.title": "Características",
-  "aofront.features.typescript": "Experiência de desenvolvimento superior, facilita o auto complete, a refatoração e causa menos bugs",
+  "aofront.tours.angular": "Framework moderno e poderoso",
+  "aofront.tours.angular-cli": "Interface de comando para o Angular",
+  "aofront.tours.angular-material": "Biblioteca de componentes Material Design",
+  "aofront.tours.bootstrap": "Design responsivo com uma das maiores libs de UI do mundo",
+  "aofront.tours.cypress": "Cypress é uma ferramenta de teste de última geração criada para a web moderna.",
+  "aofront.tours.documentation": "Docs",
+  "aofront.tours.fontawesome": "Fácil de usar vector icons e social logos",
+  "aofront.tours.guide": "Guide",
+  "aofront.tours.lazyloading.description": "Rápido carregamento inicial com carregamento por demanda de feature modules",
+  "aofront.tours.lazyloading.title": "Carregamento por demanda",
+  "aofront.tours.ngrx": "Fluxo de dados unidirecional alimentado por Observables RxJS",
+  "aofront.tours.ngxtranslate": "Uma biblioteca de internacionalização para o Angular",
+  "aofront.tours.rxjs": "Programação reativa com coleções assíncronas usando Observables",
+  "aofront.tours.themes.description": "Temas flexíveis que são suportados port provided e custom components",
+  "aofront.tours.themes.title": "Temas",
+  "aofront.tours.title": "Características",
+  "aofront.tours.typescript": "Experiência de desenvolvimento superior, facilita o auto complete, a refatoração e causa menos bugs",
   "aofront.footer.changelog": "Mostrar changelog",
   "aofront.header.github": "Project Github Repository",
   "aofront.menu.about": "Sobre",
   "aofront.menu.applications": "Exemplos",
-  "aofront.menu.features": "Características",
+  "aofront.menu.tours": "Características",
   "aofront.menu.login": "Sign in",
   "aofront.menu.logout": "Logout",
   "aofront.menu.settings": "Configurações",
@@ -59,5 +59,5 @@
   "aofront.settings.themes.title": "Themes",
   "aofront.settings.title": "Configurações",
   "aofront.title.long": "Angular Ngrx Material Início",
-  "aofront.title.short": "Angular Starter"
+  "aofront.title.short": "Apply Online"
 }
