--- a/applyonline/static/aofront/assets/i18n/sk.json
+++ b/applyonline/static/aofront/assets/i18n/sk.json
@@ -12,28 +12,28 @@
   "aofront.about.get-notified.follow": "Sleduj",
   "aofront.about.get-notified.title": "Upozornenia na nové vydania",
   "aofront.about.get-started": "Ako začať",
-  "aofront.features.angular": "Moderný výkonný framework",
-  "aofront.features.angular-cli": "Rozhranie príkazového riadka pre Angular",
-  "aofront.features.angular-material": "Knižnica komponentov implementujúcich Material Dizajn",
-  "aofront.features.bootstrap": "Responzívny dizajn od ostrielanej, svetoznámej UI knižnice",
-  "aofront.features.cypress": "Cypress je nová generácia predného testovacieho nástroja postaveného pre moderný web.",
-  "aofront.features.documentation": "Dok.",
-  "aofront.features.fontawesome": "Ľahko použiteľné vektorové ikony a sociálne logá",
-  "aofront.features.guide": "Návod",
-  "aofront.features.lazyloading.description": "Rýchlejší štartovací čas s lenivým nahrávaním modulov",
-  "aofront.features.lazyloading.title": "Lenivé nahrávanie",
-  "aofront.features.ngrx": "Jednosmerný tok dát s pomocou RxJS Observables",
-  "aofront.features.ngxtranslate": "Knižnica pre internacionalizáciu Angular applikácií",
-  "aofront.features.rxjs": "Reaktívne programovanie s asynchrónymi kolekciami s pomocou Observables",
-  "aofront.features.themes.description": "Flexibilná podpora tém pre vstavané a vlastné komponenty",
-  "aofront.features.themes.title": "Témy",
-  "aofront.features.title": "Vlastnosti",
-  "aofront.features.typescript": "Vynikajúca podpora developerov, automatické dokončovanie kódu, refaktorovanie a menej chýb",
+  "aofront.tours.angular": "Moderný výkonný framework",
+  "aofront.tours.angular-cli": "Rozhranie príkazového riadka pre Angular",
+  "aofront.tours.angular-material": "Knižnica komponentov implementujúcich Material Dizajn",
+  "aofront.tours.bootstrap": "Responzívny dizajn od ostrielanej, svetoznámej UI knižnice",
+  "aofront.tours.cypress": "Cypress je nová generácia predného testovacieho nástroja postaveného pre moderný web.",
+  "aofront.tours.documentation": "Dok.",
+  "aofront.tours.fontawesome": "Ľahko použiteľné vektorové ikony a sociálne logá",
+  "aofront.tours.guide": "Návod",
+  "aofront.tours.lazyloading.description": "Rýchlejší štartovací čas s lenivým nahrávaním modulov",
+  "aofront.tours.lazyloading.title": "Lenivé nahrávanie",
+  "aofront.tours.ngrx": "Jednosmerný tok dát s pomocou RxJS Observables",
+  "aofront.tours.ngxtranslate": "Knižnica pre internacionalizáciu Angular applikácií",
+  "aofront.tours.rxjs": "Reaktívne programovanie s asynchrónymi kolekciami s pomocou Observables",
+  "aofront.tours.themes.description": "Flexibilná podpora tém pre vstavané a vlastné komponenty",
+  "aofront.tours.themes.title": "Témy",
+  "aofront.tours.title": "Vlastnosti",
+  "aofront.tours.typescript": "Vynikajúca podpora developerov, automatické dokončovanie kódu, refaktorovanie a menej chýb",
   "aofront.footer.changelog": "Zobraziť list zmien",
   "aofront.header.github": "Github Repotitár Projektu",
   "aofront.menu.about": "Domov",
   "aofront.menu.applications": "Príklady",
-  "aofront.menu.features": "Vlastnosti",
+  "aofront.menu.tours": "Vlastnosti",
   "aofront.menu.login": "Prihlásenie",
   "aofront.menu.logout": "Odhlásenie",
   "aofront.menu.settings": "Nastavenia",
