--- a/applyonline/static/aofront/assets/i18n/en.json
+++ b/applyonline/static/aofront/assets/i18n/en.json
@@ -31,7 +31,7 @@
   "aofront.tours.typescript": "Superior developer experience, code completion, refactoring and less bugs",
   "aofront.footer.changelog": "Show changelog",
   "aofront.header.github": "Project Github Repository",
-  "aofront.menu.about": "About",
+  "aofront.menu.about": "Home",
   "aofront.menu.applications": "Applications",
   "aofront.menu.applicationform": "Application Form",
   "aofront.menu.tours": "Tours",
